# TIMP_2026

./: .gitignore  1  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
Client/: CMakeLists.txt  Client.pro  connectiondialog.cpp  connectiondialog.h  main.cpp  mainwindow.cpp  mainwindow.h
DataBase/: CMakeLists.txt  DataBase.pro  main.cpp
EchoServer/: CMakeLists.txt  EchoServer.pro  dataBase.h  functionsforserver.cpp  functionsforserver.h  main.cpp  mytcpserver.cpp  mytcpserver.h
Singleton/: CMakeLists.txt  Singleton.pro  main.cpp  singleton_classic.h  singleton_safe.h
UnitTests/: CMakeLists.txt  UnitTests.pro  tst_funcforserver_test.cpp
docs/diagrams/: classdiagram.puml  usecase.puml
